--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,5 +52,11 @@
     {% if site.google_analytics %}
 
     {% endif %}
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script src="/assets/js/popper.min.js"></script>
+    <script src="/assets/js/holder.min.js"></script>
 </body>
 </html>
