--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,9 +14,12 @@
   text-decoration: none;
 }
 
-h1, h2 { /*, h3, h4, h5, h6 */
+/*
+h1, h2, h3, h4, h5, h6
   font-family: "Playfair Display", Georgia, "Times New Roman", serif;
 }
+*/
+
 
 .display-4 {
   font-size: 2.5rem;
