--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Department of Computer Engineering">
-    <link rel="icon" href="assets/images/favicon.ico">
+    <link rel="icon" href="{{ '/assets/images/favicon.ico' | prepend: site.baseurl }}">
 
     <title>cepdnaclk.github.io</title>
 
@@ -15,36 +15,35 @@
     {% seo %}
 </head>
 
-
 <body>
-    <div class="container">
-        <header class="blog-header py-3">
-            <div class="row flex-nowrap justify-content-between align-items-center">
-                <div class="col-2 pt-1">
-                    <img class=" mx-auto d-block img-fluid" src="{{ '/assets/images/crest.png' | prepend: site.baseurl }}" alt="Logo">
-                </div>
-                <div class="col-8">
-                    <a class="blog-header-logo text-dark" href="#">
-                        Department of Computer Engineering <br>
-                        <small class="small">University of Peradeniya, Sri Lanka</small>
-                    </a>
-                </div>
-                <div class="col-2 d-flex justify-content-end align-items-center">
-                    <a class="d-none btn btn-sm btn-outline-secondary" href="http://www.ce.pdn.ac.lk" target="_blank">Department Site</a>
-                </div>
+    <header class="blog-header py-3">
+        <div class="row flex-nowrap justify-content-between align-items-center">
+            <div class="col-2 pt-1">
+                <img class=" mx-auto d-block img-fluid" src="{{ '/assets/images/crest.png' | prepend: site.baseurl }}" alt="Logo">
             </div>
-        </header>
+            <div class="col-8">
+                <a class="blog-header-logo text-dark" href="#">
+                    Department of Computer Engineering <br>
+                    <small class="small">University of Peradeniya, Sri Lanka</small>
+                </a>
+            </div>
+            <div class="col-2 d-flex justify-content-end align-items-center">
+                <a class="d-none btn btn-sm btn-outline-secondary" href="http://www.ce.pdn.ac.lk" target="_blank">Department Site</a>
+            </div>
+        </div>
+    </header>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <a class="navbar-brand" href="#">&nbsp;</a>
 
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <a class="navbar-brand" href="#">&nbsp;</a>
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <!-- Toggler/collapsibe Button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <!-- Links -->
+            <div class="container">
 
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <!-- Links -->
                 <ul class="navbar-nav  justify-content-between w-100">
                     <li class="nav-item"><a class="nav-link" href="./sites/labs">Labs</a></li>
                     <li class="nav-item"><a class="nav-link" href="./sites/projects">Projects</a></li>
@@ -70,9 +69,9 @@
                     <li class="nav-item"><a class="nav-link" href="./sites/other">Other</a></li>
 
                 </ul>
-            </ul>
-        </nav>
-    </div>
+            </div>
+        </ul>
+    </nav>
 
     <main role="main" class="container pt-5 vh-50" >
         {{ content }}
