--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@
 
                 <ul class="navbar-nav  justify-content-between w-100">
                     <li class="nav-item"><a class="nav-link" href="./sites/labs">Labs</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./sites/projects">Projects</a></li>
+                    <!--<li class="nav-item"><a class="nav-link" href="./sites/projects">Projects</a></li>-->
                     <li class="nav-item"><a class="nav-link" href="./sites/students">Students</a></li>
                     <li class="nav-item"><a class="nav-link" href="./sites/servers">Servers</a></li>
 
@@ -75,10 +75,9 @@
 
     <main role="main" class="container pt-5 vh-50" >
         {{ content }}
-
     </main>
 
-    <footer class="blog-footer">
+    <footer class="blog-footer mt-5" style="background-color: lightgray!important;">
         <p>
             <a href="#">Back to top</a>
         </p>
