--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header class="blog-header py-3">
+    <header class="blog-header py-3 px-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-2 pt-1">
                 <img class=" mx-auto d-block img-fluid" src="{{ '/assets/images/crest.png' | prepend: site.baseurl }}" alt="Logo">
