Added Google Analytics Property (Full access shared to webteam@gs.pdn.ac.lk)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,10 @@
     <link href="{{ '/assets/css/index.css' | prepend: site.baseurl }}" rel="stylesheet">
 
     {% seo %}
+
+    {% if site.ga_tracking != nil -%}
+    {% include analytics.html -%}
+    {% endif -%}
 </head>
 
 <body>
