A few minor updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Department of Computer Engineering">
-    <link rel="icon" href="{{ '/assets/images/favicon.ico' | prepend: site.baseurl }}">
+    {% include meta.html -%}
 
     <title>{{ page.title }}</title>
 
@@ -49,10 +45,6 @@
         </div>
     </div>
 </main>
-
-{% if site.google_analytics %}
-
-{% endif %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
