--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -66,7 +66,7 @@
 
                     <!-- <li class="nav-item"><a class="nav-link" href="./sites/results">Results</a></li> -->
                     <!-- <li class="nav-item"><a class="nav-link" href="./sites/marks">Marks</a></li> -->
-                    <li class="nav-item"><a class="nav-link" href="/faq">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://faq.ce.pdn.ac.lk">FAQ</a></li>
                     <li class="nav-item"><a class="nav-link" href="./sites/other">Other</a></li>
 
                 </ul>
