Discord page added

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,5 +1,13 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 <meta name="author" content="Department of Computer Engineering">
+
+<meta name="theme-color" content="#343a40">
+<meta name="ms-application-navbutton-color" content="#343a40">
+<meta name="apple-mobile-web-app-status-bar-style" content="#343a40">
+
 <link rel="icon" href="{{ '/assets/images/favicon.ico' | prepend: site.baseurl }}">
+
 <meta name="google-site-verification" content="ruGqT5-0nRAo5jksg9fx0WUoZ5mMBiz9Zkv7x-17Oo8" />
+
+{% seo title=false %}
